# mailtrap-rs

./: .gitignore  Cargo.toml
src/: lib.rs
src/endpoints/: mod.rs
src/endpoints/bulk/: endpoint.rs  request.rs  response.rs
src/endpoints/contacts/: mod.rs
src/endpoints/contacts/contacts/: endpoint.rs  mod.rs  request.rs  response.rs  schema.rs
src/endpoints/contacts/fields/: endpoint.rs  mod.rs  request.rs  schema.rs
src/endpoints/contacts/imports/: endpoint.rs  request.rs  schema.rs
src/endpoints/contacts/lists/: endpoint.rs  request.rs  schema.rs
src/endpoints/general/: mod.rs
src/endpoints/general/accounts/: endpoint.rs  mod.rs  request.rs  response.rs
src/endpoints/general/addresses/: endpoint.rs  request.rs  response.rs  schema.rs
src/endpoints/general/billing/: endpoint.rs  mod.rs  request.rs  response.rs  schema.rs
src/endpoints/general/permissions/: endpoint.rs  request.rs  response.rs  schema.rs
src/endpoints/sending/: mod.rs
src/endpoints/sending/domains/: endpoint.rs  request.rs  response.rs  schema.rs
src/endpoints/sending/emails/: endpoint.rs  request.rs  schema.rs
src/endpoints/sending/suppressions/: endpoint.rs  request.rs  schema.rs
src/endpoints/template/: endpoint.rs  mod.rs  request.rs  schema.rs
src/endpoints/testing/: mod.rs
src/endpoints/testing/attachments/: endpoint.rs  mod.rs  request.rs  schema.rs
src/endpoints/testing/emails/: endpoint.rs  request.rs  (+1 more)
src/framework/: auth.rs  endpoint.rs  mod.rs
src/framework/client/: async_api.rs  blocking_api.rs
src/framework/response/: api_fail.rs  mod.rs
(+12 files in other folders)
