[package]
name = "mailtrap-rs"
version = "0.1.0"
authors = ["flowxd137 (contact@onigiri.software)"]
repository = "https://github.com/windify-vn/mailtrap-rs"
edition = "2024"
description = "Rust library for the Mailtrap API"
keywords = ["mailtrap", "api", "client"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["default-tls"]
blocking = ["reqwest/blocking"]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
spec = []

[dependencies]
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }

chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
    "std"
] }

uuid = { version = "1.17", default-features = false, features = ["serde"]}

mime_guess = "2.0.5"
base64 = "0.22"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde_with = "3.14"
serde_repr = "0.1"

strum_macros = "0.27"

thiserror = "2"
typed-builder = "0.21"
url = "2.5"


[dev-dependencies]

